Prevent the navbar overlapping content on mobile

--- a/inventory/static/inventory/chrome.css
+++ b/inventory/static/inventory/chrome.css
@@ -1,9 +1,11 @@
-body, html {
-    height: 100%;
-}
-
 @media (min-width: 768px) {
     aside {
         height: 100%;
+    }
+}
+
+@media (max-width: 767px) {
+    body {
+        padding-top: 3em;
     }
 }
